@@ -1305,13 +1305,16 @@ $emaj_start_group$
 -- purge the emaj history by deleting all rows prior the 'history_retention' parameter 
 --   and not deleting rows generated by groups that are currently in logging state
     DELETE FROM emaj.emaj_hist WHERE hist_datetime < 
-      (SELECT MIN(datetime) FROM (
+      (SELECT MIN(datetime) FROM 
+        (
                  -- compute the least recent start_group time of groups in logging state
-         (SELECT MIN(hist_datetime) FROM emaj.emaj_group, emaj.emaj_hist 
-           WHERE group_state = 'LOGGING' AND hist_function = 'START_GROUP BEGIN' AND group_name = hist_object)
+          (SELECT MIN(hist_datetime) FROM emaj.emaj_group, emaj.emaj_hist 
+             WHERE group_name = hist_object AND group_state = 'LOGGING' AND 
+                   hist_function = 'START_GROUP' AND hist_event = 'BEGIN')
          UNION 
                  -- compute the timestamp of now minus the history_retention
-         (SELECT current_timestamp - (SELECT param_value_interval FROM emaj.emaj_param WHERE param_key = 'history_retention'))
+          (SELECT current_timestamp - 
+                  (SELECT param_value_interval FROM emaj.emaj_param WHERE param_key = 'history_retention'))
         ) AS tmst(datetime));
 -- insert begin in the history
     INSERT INTO emaj.emaj_hist (hist_function, hist_event, hist_object) 
